// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Carousel/demo/animation-card.md correctly 1`] = `
<div
  autoplay=""
  class="arco-carousel arco-carousel-indicator-position-outer"
  style="width:100%;height:240px"
>
  <div
    class="arco-carousel-card arco-carousel-horizontal"
  >
    <div
      aria-hidden="false"
      class="arco-carousel-item-current"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms;width:60%"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/cd7a1aaea8e1c5e3d26fe2591e561798.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
    <div
      aria-hidden="true"
      class="arco-carousel-item-next"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms;width:60%"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/6480dbc69be1b5de95010289787d64f1.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
    <div
      aria-hidden="true"
      class=""
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms;width:60%"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/0265a04fddbd77a19602a15d9d55d797.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
    <div
      aria-hidden="true"
      class="arco-carousel-item-prev"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms;width:60%"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/24e0dd27418d2291b65db1b21aa62254.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
  </div>
  <div
    class="arco-carousel-indicator-wrapper arco-carousel-indicator-wrapper-outer"
  >
    <div
      class="arco-carousel-indicator arco-carousel-indicator-dot arco-carousel-indicator-outer"
    >
      <span
        class="arco-carousel-indicator-item arco-carousel-indicator-item-active"
        data-index="0"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="1"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="2"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="3"
      />
    </div>
  </div>
</div>
`;

exports[`renders Carousel/demo/animation-fade.md correctly 1`] = `
<div
  autoplay=""
  class="arco-carousel arco-carousel-indicator-position-bottom"
  style="width:600px;height:240px"
>
  <div
    class="arco-carousel-fade arco-carousel-horizontal"
  >
    <div
      aria-hidden="false"
      class="arco-carousel-item-current"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms;width:100%"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/cd7a1aaea8e1c5e3d26fe2591e561798.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
    <div
      aria-hidden="true"
      class="arco-carousel-item-next"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms;width:100%"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/6480dbc69be1b5de95010289787d64f1.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
    <div
      aria-hidden="true"
      class=""
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms;width:100%"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/0265a04fddbd77a19602a15d9d55d797.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
    <div
      aria-hidden="true"
      class="arco-carousel-item-prev"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms;width:100%"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/24e0dd27418d2291b65db1b21aa62254.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
  </div>
  <div
    class="arco-carousel-indicator-wrapper arco-carousel-indicator-wrapper-bottom"
  >
    <div
      class="arco-carousel-indicator arco-carousel-indicator-dot arco-carousel-indicator-bottom"
    >
      <span
        class="arco-carousel-indicator-item arco-carousel-indicator-item-active"
        data-index="0"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="1"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="2"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="3"
      />
    </div>
  </div>
</div>
`;

exports[`renders Carousel/demo/auto.md correctly 1`] = `
<div
  autoplay=""
  class="arco-carousel arco-carousel-indicator-position-bottom"
  style="width:600px;height:240px"
>
  <div
    class="arco-carousel-slide arco-carousel-horizontal"
  >
    <div
      aria-hidden="false"
      class="arco-carousel-item-current"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/cd7a1aaea8e1c5e3d26fe2591e561798.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
    <div
      aria-hidden="true"
      class="arco-carousel-item-next"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/6480dbc69be1b5de95010289787d64f1.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
    <div
      aria-hidden="true"
      class=""
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/0265a04fddbd77a19602a15d9d55d797.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
    <div
      aria-hidden="true"
      class="arco-carousel-item-prev"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/24e0dd27418d2291b65db1b21aa62254.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
  </div>
  <div
    class="arco-carousel-indicator-wrapper arco-carousel-indicator-wrapper-bottom"
  >
    <div
      class="arco-carousel-indicator arco-carousel-indicator-dot arco-carousel-indicator-bottom"
    >
      <span
        class="arco-carousel-indicator-item arco-carousel-indicator-item-active"
        data-index="0"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="1"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="2"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="3"
      />
    </div>
  </div>
  <div
    class="arco-carousel-arrow arco-carousel-arrow-hover"
  >
    <div
      class="arco-carousel-arrow-left"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-left"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M32 8.4 16.444 23.956 32 39.513"
        />
      </svg>
    </div>
    <div
      class="arco-carousel-arrow-right"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-right"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="m16 39.513 15.556-15.557L16 8.4"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders Carousel/demo/basic.md correctly 1`] = `
<div
  class="arco-carousel arco-carousel-indicator-position-bottom"
  style="width:600px;height:240px"
>
  <div
    class="arco-carousel-slide arco-carousel-horizontal"
  >
    <div
      aria-hidden="false"
      class="arco-carousel-item-current"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/cd7a1aaea8e1c5e3d26fe2591e561798.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
    <div
      aria-hidden="true"
      class="arco-carousel-item-next"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/6480dbc69be1b5de95010289787d64f1.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
    <div
      aria-hidden="true"
      class=""
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/0265a04fddbd77a19602a15d9d55d797.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
    <div
      aria-hidden="true"
      class="arco-carousel-item-prev"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/24e0dd27418d2291b65db1b21aa62254.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
  </div>
  <div
    class="arco-carousel-indicator-wrapper arco-carousel-indicator-wrapper-bottom"
  >
    <div
      class="arco-carousel-indicator arco-carousel-indicator-dot arco-carousel-indicator-bottom"
    >
      <span
        class="arco-carousel-indicator-item arco-carousel-indicator-item-active"
        data-index="0"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="1"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="2"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="3"
      />
    </div>
  </div>
  <div
    class="arco-carousel-arrow"
  >
    <div
      class="arco-carousel-arrow-left"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-left"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M32 8.4 16.444 23.956 32 39.513"
        />
      </svg>
    </div>
    <div
      class="arco-carousel-arrow-right"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-right"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="m16 39.513 15.556-15.557L16 8.4"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders Carousel/demo/indicator.md correctly 1`] = `
Array [
  <div
    class="arco-radio-group arco-radio-group-type-button arco-radio-size-default arco-radio-mode-outline"
    style="margin-bottom:10px"
  >
    <label
      class="arco-radio-button arco-radio-checked"
    >
      <input
        checked=""
        name="type"
        type="radio"
        value="dot"
      />
      <span
        class="arco-radio-button-inner"
      >
        dot
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="type"
        type="radio"
        value="line"
      />
      <span
        class="arco-radio-button-inner"
      >
        line
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="type"
        type="radio"
        value="slider"
      />
      <span
        class="arco-radio-button-inner"
      >
        slider
      </span>
    </label>
  </div>,
  <br />,
  <div
    class="arco-radio-group arco-radio-group-type-button arco-radio-size-default arco-radio-mode-outline"
    style="margin-bottom:20px"
  >
    <label
      class="arco-radio-button"
    >
      <input
        name="position"
        type="radio"
        value="left"
      />
      <span
        class="arco-radio-button-inner"
      >
        left
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="position"
        type="radio"
        value="right"
      />
      <span
        class="arco-radio-button-inner"
      >
        right
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="position"
        type="radio"
        value="top"
      />
      <span
        class="arco-radio-button-inner"
      >
        top
      </span>
    </label>
    <label
      class="arco-radio-button arco-radio-checked"
    >
      <input
        checked=""
        name="position"
        type="radio"
        value="bottom"
      />
      <span
        class="arco-radio-button-inner"
      >
        bottom
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="position"
        type="radio"
        value="outer"
      />
      <span
        class="arco-radio-button-inner"
      >
        outer
      </span>
    </label>
  </div>,
  <div
    class="arco-carousel arco-carousel-indicator-position-bottom"
    style="width:600px;height:240px"
  >
    <div
      class="arco-carousel-slide arco-carousel-horizontal"
    >
      <div
        aria-hidden="false"
        class="arco-carousel-item-current"
        style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
      >
        <img
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/cd7a1aaea8e1c5e3d26fe2591e561798.png~tplv-uwbnlip3yd-webp.webp"
          style="width:100%"
        />
      </div>
      <div
        aria-hidden="true"
        class="arco-carousel-item-next"
        style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
      >
        <img
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/6480dbc69be1b5de95010289787d64f1.png~tplv-uwbnlip3yd-webp.webp"
          style="width:100%"
        />
      </div>
      <div
        aria-hidden="true"
        class=""
        style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
      >
        <img
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/0265a04fddbd77a19602a15d9d55d797.png~tplv-uwbnlip3yd-webp.webp"
          style="width:100%"
        />
      </div>
      <div
        aria-hidden="true"
        class="arco-carousel-item-prev"
        style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
      >
        <img
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/24e0dd27418d2291b65db1b21aa62254.png~tplv-uwbnlip3yd-webp.webp"
          style="width:100%"
        />
      </div>
    </div>
    <div
      class="arco-carousel-indicator-wrapper arco-carousel-indicator-wrapper-bottom"
    >
      <div
        class="arco-carousel-indicator arco-carousel-indicator-dot arco-carousel-indicator-bottom"
      >
        <span
          class="arco-carousel-indicator-item arco-carousel-indicator-item-active"
          data-index="0"
        />
        <span
          class="arco-carousel-indicator-item"
          data-index="1"
        />
        <span
          class="arco-carousel-indicator-item"
          data-index="2"
        />
        <span
          class="arco-carousel-indicator-item"
          data-index="3"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`renders Carousel/demo/selfComponent.md correctly 1`] = `
<div>
  <div
    class="arco-carousel arco-carousel-indicator-position-bottom"
    style="width:600px;height:240px"
  >
    <div
      class="arco-carousel-slide arco-carousel-horizontal"
    >
      <div
        class="arco-carousel-item-current"
        style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
      >
        <img
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/cd7a1aaea8e1c5e3d26fe2591e561798.png~tplv-uwbnlip3yd-webp.webp"
          style="width:100%"
        />
      </div>
      <div
        class="arco-carousel-item-next"
        style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
      >
        <img
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/6480dbc69be1b5de95010289787d64f1.png~tplv-uwbnlip3yd-webp.webp"
          style="width:100%"
        />
      </div>
      <div
        class=""
        style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
      >
        <img
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/0265a04fddbd77a19602a15d9d55d797.png~tplv-uwbnlip3yd-webp.webp"
          style="width:100%"
        />
      </div>
      <div
        class="arco-carousel-item-prev"
        style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
      >
        <img
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/24e0dd27418d2291b65db1b21aa62254.png~tplv-uwbnlip3yd-webp.webp"
          style="width:100%"
        />
      </div>
    </div>
    <div
      class="arco-carousel-indicator-wrapper arco-carousel-indicator-wrapper-bottom"
    >
      <div
        class="arco-carousel-indicator arco-carousel-indicator-dot arco-carousel-indicator-bottom"
      >
        <span
          class="arco-carousel-indicator-item arco-carousel-indicator-item-active"
          data-index="0"
        />
        <span
          class="arco-carousel-indicator-item"
          data-index="1"
        />
        <span
          class="arco-carousel-indicator-item"
          data-index="2"
        />
        <span
          class="arco-carousel-indicator-item"
          data-index="3"
        />
      </div>
    </div>
    <div
      class="arco-carousel-arrow"
    >
      <div
        class="arco-carousel-arrow-left"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-left"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M32 8.4 16.444 23.956 32 39.513"
          />
        </svg>
      </div>
      <div
        class="arco-carousel-arrow-right"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-right"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="m16 39.513 15.556-15.557L16 8.4"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Carousel/demo/vertical.md correctly 1`] = `
<div
  class="arco-carousel arco-carousel-indicator-position-right"
  style="width:600px;height:240px"
>
  <div
    class="arco-carousel-slide arco-carousel-vertical"
  >
    <div
      aria-hidden="false"
      class="arco-carousel-item-current"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/cd7a1aaea8e1c5e3d26fe2591e561798.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
    <div
      aria-hidden="true"
      class="arco-carousel-item-next"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/6480dbc69be1b5de95010289787d64f1.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
    <div
      aria-hidden="true"
      class=""
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/0265a04fddbd77a19602a15d9d55d797.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
    <div
      aria-hidden="true"
      class="arco-carousel-item-prev"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/24e0dd27418d2291b65db1b21aa62254.png~tplv-uwbnlip3yd-webp.webp"
        style="width:100%"
      />
    </div>
  </div>
  <div
    class="arco-carousel-indicator-wrapper arco-carousel-indicator-wrapper-right"
  >
    <div
      class="arco-carousel-indicator arco-carousel-indicator-dot arco-carousel-indicator-right"
    >
      <span
        class="arco-carousel-indicator-item arco-carousel-indicator-item-active"
        data-index="0"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="1"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="2"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="3"
      />
    </div>
  </div>
</div>
`;
